# PIIN_FRANKA

./: .gitignore  ARCHITECTURE_EXPLAINED.md  CLAUDE.md  PAPER_DRAFT.md  SESSION.md  Step1_Indication.md  generate_fourier_dataset.py  generate_isaac_dataset.py  goal.md  requirements.txt
.claude/: settings.json
.claude/agents/: data-pipeline.md  experiment-tracker.md  implementer.md  novelty-supervisor.md  paper-extractor.md  physics-validator.md  project-tracker.md  session-scribe.md
.claude/commands/: process-papers.md
.claude/hooks/: block-python-run.sh  hooks.json  (+1 more)
controller/: __init__.py  compute_error_bound.py  computed_torque_pd.py  lyapunov_gains.py  model_loader.py  payload_identification.py
docs/: HOW_TO_USE.md  STAGE1_README.md
experiments/: EXPERIMENT_PLAN.md
network/: constants.py  friction_net.py  grey_box_net.py
pinocchio_baseline/: friction_sparsity_analysis.py  panda.urdf  rnea_wrapper.py
ros2_ws/src/pinn_franka_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/pinn_franka_controller/config/: controller_params.yaml
ros2_ws/src/pinn_franka_controller/launch/: pinn_controller.launch.py
ros2_ws/src/pinn_franka_controller/pinn_franka_controller/: __init__.py  moveit_plan_bridge.py  pinn_controller_node.py  trajectory_interpolator.py
simulation/: isaac_franka_moveit_bridge.py
stage4/: __init__.py  demo_targets.py  dry_run.py  grasp_config.py  grasp_executor.py  gripper_controller.py
tracking/: PROJECT_STATE.md  experiments_log.csv  papers_review.csv
training/: constraints.py  dataset.py  fine_tune.py  train.py
(+30 files in other folders)
