<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pinn_franka_controller</name>
  <version>0.1.0</version>
  <description>
    ROS2 Jazzy node bridging MoveIt2 trajectory output to the PINN-based
    computed-torque + PD controller for the Franka Panda 7-DoF arm.
    Stage 2 of the PINN Franka pipeline (see goal.md).
  </description>
  <maintainer email="hugodurieuxh@gmail.com">Hugo Durieux</maintainer>
  <license>MIT</license>

  <!-- Build / execution dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>

  <!--
    franka_msgs is optional: only needed when running on real hardware with
    franka_ros2.  Uncomment the line below if franka_ros2 is installed.
  -->
  <!-- <exec_depend>franka_msgs</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
